Drop recursive redirect

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 My personal site in progress
+What do I really want to say?
+- My background
+- My values
+- My expectations
+- My goals
+- My projects
